Implemented taking the factorio version from the validate request.
